--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -13,6 +13,7 @@
         android:text="Sample App"
         android:textColor="@color/app_color"
         android:textSize="18dp"
+        android:onClick="onCLickMatrix"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
